# TinyFPGA-A-Programmer

./: .gitignore  README.md  setup.cfg  setup.py
board/: Pin_Header_Straight_1x05_Pitch2.54mm_SMD.kicad_mod  TinyFPGA-A-Programmer-cache.lib  TinyFPGA-A-Programmer.kicad_pcb  TinyFPGA-A-Programmer.net  TinyFPGA-A-Programmer.pro  TinyFPGA-A-Programmer.sch  fp-lib-table  pic.lib
board/tinyfpga.pretty/: FCI-Micro-USB.kicad_mod  Pin_Header_Straight_1x05_Pitch2.54mm_SMD.kicad_mod  SOT23.kicad_mod
firmware/: config.mc3  main.c
firmware/mcc_generated_files/: interrupt_manager.c  interrupt_manager.h  mcc.c  mcc.h  pin_manager.c  pin_manager.h
firmware/mcc_generated_files/usb/: usb.h  usb_descriptors.c  usb_device.c  usb_device.h  usb_device_cdc.c  usb_device_cdc.h  usb_device_config.h  usb_device_events.c  usb_device_local.h  usb_hal_pic16f1.h
firmware/nbproject/: Makefile-default.mk  Makefile-genesis.properties  Makefile-local-default.mk  configurations.xml  project.xml
firmware/nbproject/private/: SuppressibleMessageMemo.properties  configurations.xml
python/: __init__.py  tinyfpgaa.py  tinyfpgaprogrammer.py  tinyproga.py  usb_gpio.py
python/tinyfpgaa/: tinyfpgaa.py  tinyproga.py
