[metadata]
name=tinyfpgaa
version = 0.10.0
author = William D. Jones
author_email = thor0505@comcast.net
description = Python package for interfacing with the TinyFPGA A Programmer.
url = https://github.com/tinyfpga/TinyFPGA-A-Programmer
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = tinyfpgaa
# https://stackoverflow.com/a/67238346
# Required to support editable installs.
package_dir =
    = python
python_requires = >= 3.7

[options.entry_points]
console_scripts =
    tinyproga=tinyfpgaa.tinyproga:main
